Algumas mudaças na forma como mapeia os dias dos hábitos

--- a/src/components/Habits/Habit.css
+++ b/src/components/Habits/Habit.css
@@ -9,3 +9,11 @@
     font-family: 'Lexend Deca', sans-serif;
     color: #666666;
 }
+.habit {
+    background-color: #ffffff;
+}
+.habit p {
+    color: #666666;
+    font-family: 'Lexend Deca', sans-serif;
+
+}
